...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title -->
            <TextView
                android:id="@+id/tv_organizer_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Organizer Info"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/text_dark" />

            <!-- Enable Auto-Login toggle -->
            <LinearLayout
...
